syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "metapb";

option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;

message Zone {
    string name         = 1;
    string server_addrs = 2;
    string root_dir     = 3;
}

message Task {
    string id          = 1;
    string type        = 2;
    string contents    = 3;
}

message DB {
    uint32 id   = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "DBID"];
    string name = 2;
}

enum SpaceStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    SS_Invalid  = 0;
    SS_Init     = 1;
    SS_Prepare  = 2;
    SS_Running  = 3;
    SS_Delete   = 4;
    SS_Deleting = 5;
}

enum SpaceType {
    option (gogoproto.goproto_enum_prefix) = false;
    ST_ENTITY = 0;
    ST_EDGE   = 1;
    ST_BLOB   = 2;
}

message KeyPolicy {
    string key_field = 1; // witch field will be generated for key
    string key_func = 2; // witch function will be used when generating key
}

message Space {
    uint32      id      = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "SpaceID"];
    uint32      db      = 2 [(gogoproto.customname) = "DB", (gogoproto.casttype) = "DBID"];
    string      db_name = 3;
    string      name    = 4;
    SpaceType   type    = 5;
    SpaceStatus status  = 6;
    KeyPolicy   key_policy = 7;
}

enum PartitionStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    PA_INVALID      = 0;
    PA_NOTREAD      = 1;
    PA_READONLY     = 2;
    PA_READWRITE    = 3;
    PA_SPLITTING    = 4;
}

message PartitionEpoch {
    // Conf change version, auto increment when add or remove peer
    uint64 conf_version	= 1;
    // Partition version, auto increment when split or merge
    uint64 version     = 2;
}

message Partition {
    uint32           id         = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "PartitionID"];
    uint32           db         = 2 [(gogoproto.customname) = "DB", (gogoproto.casttype) = "DBID"];
    uint32           space      = 3 [(gogoproto.customname) = "Space", (gogoproto.casttype) = "SpaceID"];
    uint32           start_slot = 4 [(gogoproto.customname) = "StartSlot", (gogoproto.casttype) = "SlotID"];
    uint32           end_slot   = 5 [(gogoproto.customname) = "EndSlot", (gogoproto.casttype) = "SlotID"];
    repeated Replica replicas   = 6 [(gogoproto.nullable) = false];
    PartitionStatus  status     = 7;
    PartitionEpoch   epoch      = 8 [(gogoproto.nullable) = false];
}

message Replica {
    uint64        id            = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "ReplicaID"];
    uint32        nodeID        = 2 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "NodeID"];
    ReplicaAddrs  replica_addrs = 3 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

message Node {
    uint32    id                = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "NodeID"];
    string    ip                = 2;
    string    zone              = 3;
    uint32    version           = 4;
    ReplicaAddrs  replica_addrs = 5 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

message ReplicaAddrs {
    string heartbeat_addr = 1;
    string replicate_addr = 2;
    string rpc_addr       = 3;
    string admin_addr     = 4;
}

message RequestHeader {
    string req_id  = 1;
    string timeout = 2;
}

message ResponseHeader {
    string req_id  = 1;
    uint32 code    = 2 [(gogoproto.casttype) = "RespCode"];
    string message = 3;
    Error  error   = 4 [(gogoproto.nullable) = false];
}

message NotLeader {
    uint32 partition_id   = 1 [(gogoproto.customname) = "PartitionID", (gogoproto.casttype) = "PartitionID"];
    uint32 leader         = 2 [(gogoproto.customname) = "Leader", (gogoproto.casttype) = "NodeID"];
    string leader_addr    = 3 ;
    PartitionEpoch  epoch = 4 [(gogoproto.nullable) = false];
}

message NoLeader {
    uint32 partition_id   = 1 [(gogoproto.customname) = "PartitionID", (gogoproto.casttype) = "PartitionID"];
}

message PartitionNotFound {
    uint32 partition_id   = 1 [(gogoproto.customname) = "PartitionID", (gogoproto.casttype) = "PartitionID"];
}

message MsgTooLarge {
    uint32 partition_id  = 1 [(gogoproto.customname) = "PartitionID", (gogoproto.casttype) = "PartitionID"];
    uint64 msg_size      = 2;
}

message Error {
    option (gogoproto.onlyone) = true;

    NotLeader not_leader                   = 1;
    NoLeader  no_leader                    = 2;
    PartitionNotFound partition_not_found  = 3;
    MsgTooLarge msg_too_large              = 4;
}
